@@ -118,6 +118,13 @@ drain_timeout = 5
 # use --force
 # force = 1
 
+# OMPI Core: Specify a list of sentinel files that MTT will regularly
+# check for.  If these files exist, MTT will exit more-or-less
+# immediately (i.e., after the current test completes) and report all
+# of its results.  This is a graceful mechanism to make MTT stop right
+# where it is but not lose any results.
+# terminate_files = &getenv("HOME")/mtt-stop,&scratch_root()/mtt-stop
+
 #----------------------------------------------------------------------
 
 [Lock]
